--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.1.0",
     "firestore": "^1.1.6",
     "mdb-react-ui-kit": "^6.2.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
